--- a/style.css
+++ b/style.css
@@ -26,6 +26,54 @@ header .containner img {
 header .containner nav a {
   font-size: 1.2rem;
   padding: 6px;
+  color: var(--blue);
+  -webkit-transition: color .3s ease-in;
+  transition: color .3s ease-in;
+  position: relative;
+}
+
+header .containner nav a:hover {
+  -webkit-filter: grayscale(0.5);
+          filter: grayscale(0.5);
+}
+
+header .containner nav a:hover::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: var(--blue);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-animation: headerBar .3s linear;
+          animation: headerBar .3s linear;
+}
+
+@-webkit-keyframes headerBar {
+  0% {
+    width: 0;
+    left: 50%;
+    right: 50%;
+  }
+  100% {
+    width: 100%;
+    left: 0;
+    right: 0;
+  }
+}
+
+@keyframes headerBar {
+  0% {
+    width: 0;
+    left: 50%;
+    right: 50%;
+  }
+  100% {
+    width: 100%;
+    left: 0;
+    right: 0;
+  }
 }
 
 footer {
@@ -120,23 +168,23 @@ footer p a {
   width: 40px;
 }
 
-#sobre {
+#problema {
   padding: 35px 0;
   background: #e74c3c;
   background: linear-gradient(317deg, #e74c3c 0%, #9c2619 92%);
 }
 
-#sobre .grid .description {
+#problema .grid .description {
   color: var(--gray-50);
 }
 
-.solucao {
+#solucao {
   background: #0028b3;
   background: linear-gradient(317deg, #0028b3 0%, #2656ff 92%);
   padding-bottom: 100px;
 }
 
-.solucao .grid .description {
+#solucao .grid .description {
   color: var(--gray-50);
 }
 
@@ -237,6 +285,69 @@ footer p a {
 
 .description a:hover {
   color: var(--gray-200);
+}
+
+.animate-openLoad {
+  opacity: 1;
+  -webkit-animation: openLoad 1s linear;
+          animation: openLoad 1s linear;
+}
+
+.animate-openLoad:nth-child(2n) {
+  -webkit-animation: openLoad-reverse 1s linear;
+          animation: openLoad-reverse 1s linear;
+}
+
+@-webkit-keyframes openLoad {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100px);
+            transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@keyframes openLoad {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-100px);
+            transform: translateX(-100px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@-webkit-keyframes openLoad-reverse {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@keyframes openLoad-reverse {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100px);
+            transform: translateX(100px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
 }
 
 .plataforma {
