--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
-.containner {
+.container {
   max-width: 1080px;
   width: 96%;
   padding: 6px;
   margin: auto;
 }
 
-header .containner {
+header {
+  border-bottom: 1px solid var(--yellow-50);
+}
+
+header .container {
   width: 100%;
   padding: 6px;
   display: -webkit-box;
@@ -17,14 +21,13 @@ header .containner {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-bottom: 1px solid var(--yellow-50);
 }
 
-header .containner img {
+header .container img {
   width: 50px;
 }
 
-header .containner nav a {
+header .container nav a {
   font-size: 1.2rem;
   padding: 6px;
   color: var(--blue);
@@ -33,12 +36,12 @@ header .containner nav a {
   position: relative;
 }
 
-header .containner nav a:hover {
+header .container nav a:hover {
   -webkit-filter: grayscale(0.5);
           filter: grayscale(0.5);
 }
 
-header .containner nav a:hover::after {
+header .container nav a:hover::after {
   content: "";
   width: 100%;
   height: 2px;
@@ -84,7 +87,7 @@ footer {
           box-shadow: 1px 1px 5px var(--yellow-50);
 }
 
-footer .containner {
+footer .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -97,11 +100,11 @@ footer .containner {
       justify-content: space-around;
 }
 
-footer .containner p {
+footer .container p {
   text-align: center;
 }
 
-footer .containner p a {
+footer .container p a {
   color: var(--blue);
   font-weight: bold;
 }
@@ -178,25 +181,72 @@ footer .containner p a {
 
 .banner .backdrop .next-section a svg {
   width: 40px;
+  -webkit-transition: -webkit-transform .3s ease-in;
+  transition: -webkit-transform .3s ease-in;
+  transition: transform .3s ease-in;
+  transition: transform .3s ease-in, -webkit-transform .3s ease-in;
 }
 
-#problema {
-  padding: 35px 0;
+.banner .backdrop .next-section a:hover svg {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.divider {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.divider svg {
+  position: relative;
+  display: block;
+  width: calc(114% + 1.3px);
+  height: 43px;
+  z-index: 2;
+}
+
+.divider svg .fill {
+  fill: var(--gray-50);
+}
+
+#problem {
+  padding: 65px 0;
   background: #e74c3c;
   background: linear-gradient(317deg, #e74c3c 0%, #9c2619 92%);
+  position: relative;
 }
 
-#problema .grid .description {
+#problem .divider {
+  bottom: 0;
+}
+
+#problem .grid .description {
   color: var(--gray-50);
 }
 
-#solucao {
+#solution {
+  position: relative;
   background: #0028b3;
-  background: linear-gradient(317deg, #0028b3 0%, #2656ff 92%);
-  padding-bottom: 100px;
+  background: -webkit-gradient(linear, right top, left top, from(#0028b3), to(#2656ff));
+  background: linear-gradient(270deg, #0028b3 0%, #2656ff 100%);
+  padding: 100px 0;
 }
 
-#solucao .grid .description {
+#solution .divider {
+  margin-top: -143px;
+}
+
+#solution .divider:nth-child(3) {
+  bottom: 0px;
+  margin-top: 0;
+}
+
+#solution .grid .description {
   color: var(--gray-50);
 }
 
@@ -362,11 +412,11 @@ footer .containner p a {
   }
 }
 
-.plataforma {
+.platform {
   padding: 35px 0;
 }
 
-.plataforma div {
+.platform div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -382,7 +432,7 @@ footer .containner p a {
   overflow: hidden;
 }
 
-.plataforma div span {
+.platform div span {
   color: var(--green-200);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -391,11 +441,11 @@ footer .containner p a {
   background: var(--green-50);
 }
 
-.plataforma div span svg {
+.platform div span svg {
   margin: auto;
 }
 
-.plataforma div p {
+.platform div p {
   padding: 6px;
   font-size: 1.2rem;
   line-height: 1.8rem;
